--- a/static/main/css/basic-form.css
+++ b/static/main/css/basic-form.css
@@ -1,30 +1,25 @@
 body {
-    background-image: url(/static/images/background_tile.png);
-    background-repeat: repeat
+    background-image: url(/static/images/example_background.png);
+    background-repeat: repeat;
 }
 
 label {
     color: #000;
-    font-size: 1.4em;
-    margin-top: 3vh;
+    font-size: 1.3em;
+    margin-top: 2vh;
 }
 
 
 .page-title {
+    color: #000;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    border-bottom: 2px solid #FEBC4E;
+    padding-bottom: 1vh;
+    max-width: 90%;
     font-size: 2em;
-    color: #000;
-}
-
-.form-block {
-    color: #000;
-    border: 1px solid #6c5ce7;
-    background: #FFF;
-}
-
-.form-block:hover {
-    color: #FFF;
-    background-color: #6c5ce7;
-    border: 1px solid #6c5ce7;
+    margin-bottom: 2vh;
 }
 
 .form-body {
@@ -34,9 +29,9 @@ label {
 }
 
 .form-signin {
-    background: #C4BFFF;
-    border-radius: 10px;
+    background: #FFF;
     padding: 3em;
+    border-radius: 10px;
 }
 
 .btn-primary {
